:bug: Fix input border-radius on mobile
Fix input border-radius on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -59,7 +59,6 @@ a:active {
 
 h1,
 h2 {
-  margin-bottom: 1em;
   text-align: center;
 }
 
